<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="araikovichinc.ratemeconcept2.Activities.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/textColorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <EditText
                android:id="@+id/email_text"
                android:textColor="@color/textColorPrimary"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/password_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/textColorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_login"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/Login"
            android:padding="12dp"
            android:layout_marginTop="40dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="70dp">

            <TextView
                android:id="@+id/havent_yet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/NoAccYet"
                android:gravity="right"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CreateOne"
                android:gravity="left"
                android:layout_marginLeft="3dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>
